# pychords

./: .gitignore  LICENSE  README.md  abstract_chord.py  abstract_scale.py  chords.py  concrete_chord.py  concrete_scale.py  manual_test_file.py  modes.py  notes.py  setup.cfg  test.py  theoretical_chord.py  theoretical_scale.py  transpose.py
examples/: examples.py
pychords/: chord_types.py  chords.py  concrete_chord.py  modes.py  notes.py  scales.py  transpose.py
pychords.egg-info/: PKG-INFO
