[metadata]
name = pychords
version = 0.0.1
author = YouGuessedMyName
author_email = Please reach out using github
description = Harmony modelling using python
long_description = file: README.modelling
long_description_content_type = text/markdown
url = https://github.com/YouGuessedMyName/pychords
classsifiers =
    Programming Language :: Python :: 3
    License :: MIT Licence
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False